fixed navbar and sidebar z-index issue where pokemon cards were appearing on top of menu while using a narrow viewport.

--- a/static/styles.css
+++ b/static/styles.css
@@ -30,3 +30,9 @@
 .type-steel    { background-color: #B7B7CE; }
 .type-fairy    { background-color: #D685AD; }
 
+.navbar,
+.navbar-collapse,
+.offcanvas {
+    position: relative;
+    z-index: 2000 !important;
+}
